--- a/css/styles.css
+++ b/css/styles.css
@@ -572,6 +572,144 @@ ul {
   pointer-events: none;
 }
 
+.modal-h3 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--main-color);
+  margin-top: 40px;
+  margin-bottom: 12px;
+}
+
+.modal-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--less-i-tex);
+  margin-top: 10px;
+  margin-bottom: 4px;
+}
+
+.modal-input {
+  width: 448px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.input-svg {
+  position: absolute;
+  top: 25%;
+  left: 3%;
+}
+
+.input-div {
+  position: relative;
+}
+
+.modal-input:hover,
+.modal-input:focus,
+.modal-textarea:hover,
+.modal-textarea:focus {
+  border-color: var(--accent-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.modal-textarea {
+  width: 448px;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  display: flex;
+}
+
+.modal-in-textarea {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+  width: 416px;
+  height: 96px;
+  border: none;
+  border-color: none;
+  margin: 12px 16px 12px 16px;
+  resize: none;
+}
+
+.modal-in-textarea:hover,
+.modal-in-textarea:focus {
+  border-color: none;
+}
+
+.modal-button-2 {
+  background: var(--accent-color);
+  border-radius: 4px;
+  width: 200px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: row;
+  letter-spacing: 0.06em;
+  color: var(--background);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  margin-top: 30px;
+  display: flex;
+}
+
+.policy {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--less-i-tex);
+  margin-top: 20px;
+}
+
+.policy-window {
+  display: inline-flex;
+  justify-content: center;
+  align-items: baseline;
+}
+
+.policy-svg {
+  margin-right: 8px;
+}
+
+.policy-window::before {
+  content: "";
+}
+
+.policy-window:hover,
+.policy-window:focus {
+  stroke: var(--accent-color);
+}
+
+.modal-button-2:hover,
+.modal-button-2:focus {
+  background: var(--accent-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
 .ul-button {
   display: flex;
   align-content: center;
