--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
   --portfolio-button: #f5f4fa;
   --our-clients: #afb1b8;
   --footer-color: #2f303a;
+  --outline: #000000;
 }
 
 * {
@@ -610,6 +611,12 @@ ul {
   border-radius: 4px;
 }
 
+.modal-input:focus {
+  outline-color: var(--accent-color);
+  padding-left: 42px;
+  color: var(--main-color);
+}
+
 .input-svg {
   position: absolute;
   top: 25%;
@@ -618,15 +625,12 @@ ul {
 
 .input-div {
   position: relative;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:hover,
-.modal-input:focus,
-.modal-textarea:hover,
-.modal-textarea:focus {
-  border-color: var(--accent-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+.input-div:focus-within {
+  fill: var(--accent-color);
 }
 
 .modal-textarea {
@@ -649,11 +653,15 @@ ul {
   border-color: none;
   margin: 12px 16px 12px 16px;
   resize: none;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-in-textarea:hover,
-.modal-in-textarea:focus {
-  border-color: none;
+.modal-in-textarea:focus-within,
+.modal-textarea:focus-within {
+  outline: none;
+  color: var(--outline);
+  border-color: var(--accent-color);
 }
 
 .modal-button-2 {
@@ -686,6 +694,8 @@ ul {
   display: inline-flex;
   justify-content: center;
   align-items: baseline;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .policy-window {
@@ -729,6 +739,8 @@ ul {
   height: 16px;
   border: 2px solid var(--main-color);
   justify-content: baseline;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-button-2:hover,
